--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-boto3==1.34.17
-langchain==0.1.0
-pypdf==3.17.4
-faiss-cpu==1.7.4
-streamlit==1.30.0
+boto3==1.38.40
+langchain==0.3.26
+pypdf==5.6.0
+faiss-cpu==1.11.0
+streamlit==1.46.0
+langchain-aws
